--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/willwashburn/fasterimage",
   "license": "MIT",
   "require": {
-    "php": ">=5.4.0"
+    "php": ">=5.4.0",
+    "willwashburn/stream": ">=1.0"
   },
   "require-dev": {
     "mockery/mockery": "~0.9",
