--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,31 @@
 language: php
 
 php:
-  - 5.4
-  - 5.5
-  - 5.6
+  - '5.4'
+  - '5.5'
+  - '5.6'
+  - '7.0'
   - hhvm
+  - nightly
+
+install:
+  - composer require satooshi/php-coveralls:~0.6@stable
 
 before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
+  - mkdir -p build/logs
 
-script: phpunit
+script:
+  - phpunit --coverage-clover build/logs/clover.xml
+
+after_success:
+  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
+
+## Run on container environment
+sudo: false
+
+## Cache composer bits
+cache:
+  directories:
+    - $HOME/.composer/cache
