--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - mkdir -p build/logs
 
 script:
-  - phpunit --coverage-clover clover.xml
+  - phpunit
 
 after_success:
   - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls --coverage_clover="clover.xml" -v; fi;'
