--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     "willwashburn/stream": ">=1.0"
   },
   "require-dev": {
-    "mockery/mockery": "~0.9",
-    "phpunit/phpunit": "~4.0"
+    "phpunit/phpunit": "~6.0",
+    "php-mock/php-mock-phpunit": "^2.3"
   },
   "autoload": {
     "classmap": ["src"]
