--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0",
-    "php-mock/php-mock-phpunit": "^2.3"
+    "php-mock/php-mock-phpunit": "^2.3",
+    "php-coveralls/php-coveralls": "^2.1"
   },
   "autoload": {
     "classmap": ["src"]
