Restore composer install

--- a/circle.yml
+++ b/circle.yml
@@ -20,7 +20,8 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: mkdir -p build/logs      
+      - run: mkdir -p build/logs
+      - run: composer install -n --prefer-dist
 
       - save_cache:
           key: v1-dependencies-{{ checksum "composer.json" }}
