Tag new version

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     {
       "name": "Will Washburn",
       "email": "will@tailwindapp.com"
+    },
+    {
+      "name": "Weston Ruter",
     }
   ],
   "keywords": [
