Retry: Add fallback support for when cURL multi is not available (#18)
* Add fallback support for when cURL multi is not available

* Provide background on why curl multi may be unavailable

Co-Authored-By: Will Washburn <will.washburn@gmail.com>

* Upgrade PHPUnit to v6, replace unused mockery with php-mock-phpunit

* Use php-mock to disable curl_multi_* functions when DISABLE_CURL_MULTI=1 env var set

* Add php-coveralls/php-coveralls to composer.json instead of install via circle.yml

* Restore composer install

* Ignore code coverage report for curl multi fallbacks

* Run curl multi fallback after coverage obtained

* Tag new version

--- a/circle.yml
+++ b/circle.yml
@@ -20,8 +20,8 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: mkdir -p build/logs      
-      - run: composer require php-coveralls/php-coveralls && composer install -n --prefer-dist
+      - run: mkdir -p build/logs
+      - run: composer install -n --prefer-dist
 
       - save_cache:
           key: v1-dependencies-{{ checksum "composer.json" }}
@@ -30,4 +30,5 @@ jobs:
 
       # run tests with phpunit
       - run: ./vendor/bin/phpunit
-      - run: ./vendor/bin/php-coveralls --coverage_clover="clover.xml"      
+      - run: ./vendor/bin/php-coveralls --coverage_clover="clover.xml"
+      - run: DISABLE_CURL_MULTI=1 ./vendor/bin/phpunit
