--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     {
       "name": "Will Washburn",
       "email": "will@tailwindapp.com"
+    },
+    {
+      "name": "Weston Ruter",
     }
   ],
   "keywords": [
@@ -25,8 +28,9 @@
     "willwashburn/stream": ">=1.0"
   },
   "require-dev": {
-    "mockery/mockery": "~0.9",
-    "phpunit/phpunit": "~4.0"
+    "phpunit/phpunit": "~6.0",
+    "php-mock/php-mock-phpunit": "^2.3",
+    "php-coveralls/php-coveralls": "^2.1"
   },
   "autoload": {
     "classmap": ["src"]
