Fix typo :eyes:

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
       "email": "will@tailwindapp.com"
     },
     {
-      "name": "Weston Ruter",
+      "name": "Weston Ruter"
     }
   ],
   "keywords": [
